RESOLVED FIXED27295
The Qt DRT pops up message boxes when javascript execution takes too long
https://bugs.webkit.org/show_bug.cgi?id=27295
Summary The Qt DRT pops up message boxes when javascript execution takes too long
Simon Hausmann
Reported 2009-07-15 05:46:55 PDT
Created attachment 32779 [details] patch to re-implement shouldInterruptJavaScript() in Qt DRT Tests like fast/js/try-catch-crash.html take a long time with debug builds and the interpreter and may result in a message box popping up. Qt DRT should re-implement QWebPage::shouldInterruptJavaScript() and return false, to avoid the message boxes. The run-webkit-tests counterpart takes care of the timeout handling.
Attachments
patch to re-implement shouldInterruptJavaScript() in Qt DRT (1.27 KB, patch)
2009-07-15 05:46 PDT, Simon Hausmann
manyoso: review+
Simon Hausmann
Comment 1 2009-07-15 05:51:54 PDT
Landed in r45906
Note You need to log in before you can comment on or make changes to this bug.