2009-07-15  Simon Hausmann  <simon.hausmann@nokia.com>

Reviewed by Adam Treat.

        https://bugs.webkit.org/show_bug.cgi?id=27295

        Re-implement QWebPage::shouldInterruptJavaScript to disable
        js interruption and avoid showing a messagebox during Qt DRT
        runs when script execution takes a bit longer.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::WebPage::shouldInterruptJavaScript): Return false
        in re-implemented slot.

Canonical link: https://commits.webkit.org/37536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45906 268f45cc-cd09-0410-ab3c-d52691b4dbfc